--- a/.github/workflows/relelase.yml
+++ b/.github/workflows/relelase.yml
@@ -1,23 +1,25 @@
-name: Publishing to maven
+name: Publish package to the Maven Central Repository
 
 on:
   release:
 
 jobs:
-  build:
+  publish:
 
     runs-on: ubuntu-latest
     steps:
-      -   uses: actions/checkout@v4
-      -   name: Set up JDK 17
-          uses: actions/setup-java@v4
-          with:
-            java-version: '17'
-            distribution: 'corretto'
-
-      -   name: Publish package
-          run: mvn --batch-mode clean deploy -P central-deploy -DskipTests=true
-          env:
-            MAVEN_USERNAME: ${{ secrets.OSS_SONATYPE_USERNAME }}
-            MAVEN_PASSWORD: ${{ secrets.OSS_SONATYPE_PASSWORD }}
-            MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+      - name: Publish to the Maven Central Repository
+        run: mvn --batch-mode clean deploy -DskipTests=true
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
